# freya

./: .eslintrc.json  .gitignore  .stylelintrc.json  .swcrc  CHANGELOG.md  LICENSE.md  README.md  eslint.config.js  package.json  tsconfig.json
lib/html-utils/: Cargo.toml  Makefile
lib/html-utils/src/: lib.rs
lib/images-extractor/: Cargo.toml  Makefile
lib/images-extractor/src/: lib.rs
reference/: .swcrc  CHANGELOG.md  tsconfig.json
reference/src/talks/: common.yml
src/: build.ts  cli.ts  client.ts  configuration.ts  create.ts  css.ts  export.ts  fs.ts  index.ts  loader.ts  server.ts
src/assets/: 404.html  client.js  hot-reload.js  status.html  wait.html
src/assets/create/: classes.css.tpl  eslint.config.js.tpl  eslintrc.json.tpl  info.yml.tpl  layout.tsx.tpl  (+9 more)
src/cli/: build.ts  builders.ts  create.ts  development.ts  export.ts  exporters.ts  index.ts  init.ts  serve.ts  server.ts
src/components/: application.tsx  classes-resolver.tsx  client.ts  code.tsx  context.tsx  contexts.tsx  controller.tsx  image.tsx  index.ts  navigator.tsx  presenter.tsx  progress.tsx  qr.tsx  slide.tsx  slides-list.tsx  styling.ts  svg.tsx
src/generation/: cache.ts  code.ts  css.ts  generator.ts  index.ts  loader.ts  mode.ts  models.ts  svg.ts
src/rendering/: code.ts  index.ts  qr.ts  svg.ts  svg.tsx  unocss.config.ts  unocss.ts
src/slidesets/: generators.ts  generators.tsx  index.ts  loaders.ts  models.ts
src/templates/: 404.tsx  assets.tsx  index.tsx  page.tsx  pusher-auth.ts  service-worker.ts  service-worker.tsx  service-workers.ts  slide.tsx  speaker-notes.tsx
(+83 files in other folders)
