[package]
  name        = "html-utils"
  description = "html-utils for freya"
  repository  = "https://github.com/ShogunPanda/freya-slides"
  license     = "ISC"
  version     = "0.1.0"
  edition     = "2021"
  publish     = false

[lib]
  crate-type = ["cdylib", "rlib"]

[dependencies]
  console_error_panic_hook = { version = "0.1.7" }
  lol_html                 = "1.2.0"
  wasm-bindgen             = "0.2.87"

[profile.release]
  opt-level        = 3
  debug            = false
  debug-assertions = false
  overflow-checks  = false
  lto              = false
  panic            = 'abort'
  incremental      = false
  codegen-units    = 16
  rpath            = false
  strip            = true

[package.metadata.wasm-pack.profile.release]
  wasm-opt = ['-all']
