[package]
name = "images-extractor"
version = "0.1.0"
edition = "2021"
public = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.64"
scraper = "0.18.1"
wasm-bindgen = "0.2.87"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-all']
